= Changelog
:toc: macro
:project-url: https://github.com/sorairolake/scryptenc-rs
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

toc::[]

== {compare-url}/v0.2.1\...HEAD[Unreleased]

=== Changed

* Change the inner structure of `Params`
* Change error message

=== Removed

* Remove `From<scrypt::Params>` for `Params`
* Remove `TryFrom<Params>` for `scrypt::Params`

== {compare-url}/v0.2.0\...v0.2.1[0.2.1] - 2022-10-24

=== Added

* Add `inline` attribute

== {compare-url}/v0.1.0\...v0.2.0[0.2.0] - 2022-10-14

=== Added

* Add `Encryptor::out_len()` and `Decryptor::out_len()`
* Add `Clone` for `Encryptor` and `Decryptor`

=== Changed

* Change the type of parameters for `Encryptor::encrypt()` and
  `Decryptor::decrypt()`.
  These now takes `impl AsMut<[u8]>`.
* Rename `Encryptor::new()` to `Encryptor::with_params()`
* Change `Encryptor::new()` to use the recommended scrypt parameters instead of
  taking parameters
* Change the structure of types about the format

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2022-10-09

=== Added

* Initial release