@@ -23,3 +23,8 @@ rand_chacha = { version = "0.3.1", default-features = false }
 scrypt = "0.10.0"
 sha2 = { version = "0.10.6", default-features = false }
 thiserror = "1.0.37"
+
+[dev-dependencies]
+anyhow = "1.0.66"
+clap = { version = "4.0.18", features = ["derive"] }
+dialoguer = { version = "0.10.2", default-features = false, features = ["password"] }
