@@ -13,14 +13,34 @@
 // Lint levels of Clippy.
 #![warn(clippy::cargo, clippy::nursery, clippy::pedantic)]
 
-fn main() {
-    let input = std::env::args_os().nth(1).unwrap();
-    let contents = std::fs::read(input).unwrap();
-    let params = scryptenc::Params::new(contents).unwrap();
+use anyhow::Context;
+use clap::Parser;
+
+#[derive(Debug, Parser)]
+#[command(version, about)]
+struct Opt {
+    /// File to print the scrypt parameters.
+    #[arg(value_name("FILE"))]
+    input: std::path::PathBuf,
+}
+
+fn main() -> anyhow::Result<()> {
+    let opt = Opt::parse();
+
+    let contents = std::fs::read(&opt.input)
+        .with_context(|| format!("could not read data from {}", opt.input.display()))?;
+
+    let params = scryptenc::Params::new(contents).with_context(|| {
+        format!(
+            "{} is not a valid scrypt encrypted file",
+            opt.input.display()
+        )
+    })?;
     println!(
         "Parameters used: N = {}; r = {}; p = {};",
         params.n(),
         params.r(),
         params.p()
     );
+    Ok(())
 }
